crates/codira_codegen/src/snapshots/codira_codegen__test__assign_bit_op_bool.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func assign_bitand(a: bool, b: bool) -> bool {\n        a &= b;\n        a\n    }\n    public func assign_bitor(a: bool, b: bool) -> bool {\n        a |= b;\n        a\n    }\n    public func assign_bitxor(a: bool, b: bool) -> bool {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @assign_bitand(i1 %0, i1 %1) local_unnamed_addr #0 {
body:
  %bit_and = and i1 %0, %1
  ret i1 %bit_and
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @assign_bitor(i1 %0, i1 %1) local_unnamed_addr #0 {
body:
  %bit_or = or i1 %0, %1
  ret i1 %bit_or
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @assign_bitxor(i1 %0, i1 %1) local_unnamed_addr #0 {
body:
  %bit_xor = xor i1 %0, %1
  ret i1 %bit_xor
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
