crates/codira_codegen/src/snapshots/codira_codegen__test__assign_bit_op_i128.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func assign_bitand(a: i128, b: i128) -> i128 {\n        a &= b;\n        a\n    }\n    public func assign_bitor(a: i128, b: i128) -> i128 {\n        a |= b;\n        a\n    }\n    public func assign_bitxor(a: i128, b: i128) -> i128 {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i128 @assign_bitand(i128 %0, i128 %1) local_unnamed_addr #0 {
body:
  %bit_and = and i128 %1, %0
  ret i128 %bit_and
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i128 @assign_bitor(i128 %0, i128 %1) local_unnamed_addr #0 {
body:
  %bit_or = or i128 %1, %0
  ret i128 %bit_or
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i128 @assign_bitxor(i128 %0, i128 %1) local_unnamed_addr #0 {
body:
  %bit_xor = xor i128 %1, %0
  ret i128 %bit_xor
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
