crates/codira_codegen/src/snapshots/codira_codegen__test__assign_bit_op_i32.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func assign_bitand(a: i32, b: i32) -> i32 {\n        a &= b;\n        a\n    }\n    public func assign_bitor(a: i32, b: i32) -> i32 {\n        a |= b;\n        a\n    }\n    public func assign_bitxor(a: i32, b: i32) -> i32 {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @assign_bitand(i32 %0, i32 %1) local_unnamed_addr #0 {
body:
  %bit_and = and i32 %1, %0
  ret i32 %bit_and
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @assign_bitor(i32 %0, i32 %1) local_unnamed_addr #0 {
body:
  %bit_or = or i32 %1, %0
  ret i32 %bit_or
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @assign_bitxor(i32 %0, i32 %1) local_unnamed_addr #0 {
body:
  %bit_xor = xor i32 %1, %0
  ret i32 %bit_xor
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
