crates/codira_codegen/src/snapshots/codira_codegen__test__assign_bit_op_u16.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func assign_bitand(a: u16, b: u16) -> u16 {\n        a &= b;\n        a\n    }\n    public func assign_bitor(a: u16, b: u16) -> u16 {\n        a |= b;\n        a\n    }\n    public func assign_bitxor(a: u16, b: u16) -> u16 {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i16 @assign_bitand(i16 %0, i16 %1) local_unnamed_addr #0 {
body:
  %bit_and = and i16 %1, %0
  ret i16 %bit_and
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i16 @assign_bitor(i16 %0, i16 %1) local_unnamed_addr #0 {
body:
  %bit_or = or i16 %1, %0
  ret i16 %bit_or
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i16 @assign_bitxor(i16 %0, i16 %1) local_unnamed_addr #0 {
body:
  %bit_xor = xor i16 %1, %0
  ret i16 %bit_xor
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
